# Emis3D

./: .gitignore  LICENSE  README.md  pyproject.toml
Emis3DVenv/: pyvenv.cfg
examples/radDist/: CreateRadDist.ipynb  elongatedRing_config_example.yaml  elongatedRing_config_exampleJET.yaml
examples/runEmis3D/: runEmis3D.ipynb
examples/runEmis3D/example_data/: 184407_runConfig.yaml
examples/sxrChords/: sxrChordPlotter.ipynb  sxrChordPlotterJET.ipynb
main/: Diagnostic.py  Emis3D.py  Fieldline_Tracer.py  Globals.py  Tokamak.py  Util.py  Util_emis3D.py  Util_radDist.py  radDist.py  radDistFitting.py
runProgramScripts/: make_radDists.py  run_emis3D.py
testingScripts/: emis3DTester.py  fieldLineTester.py  radDistTester_DIII-D.py  solverTester.py  sxrChordTester.py
tokamaks/DIII-D/: DIII-D_settings.yaml
tokamaks/DIII-D/inputs/: V1_FirstWall.txt
tokamaks/DIII-D/inputs/sxrInfo/: DISRADU_DOWN_config.yaml  DISRADU_UP_config.yaml  SX45F_DOWN_config.yaml  SX45F_UP_config.yaml  SX90MF_DOWN_config.yaml  SX90MF_UP_config.yaml  SX90PF_DOWN_config.yaml  SX90PF_UP_config.yaml
tokamaks/DIII-D/sxrSavers/: SXR_crossCalib_Config.yaml  Util_SXR.py  crossCalibrateSXR.py  grabSXRData.py  radiation.py
